@@ -1,3 +1,8 @@
+2005-11-10  Aaron Faupell <afaupell@users.sourceforge.net>
+
+	* Added support for non-baseline and progressive files by
+	accepting c0-3 for SOF marker
+
 2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
